# lv_lib_rlottie

./: .gitmodules  CMakeLists.txt  README.md  lv_rlottie.c  lv_rlottie.h  lv_rlottie_example_fingerprint.c
rlottie_lib/: CMakeLists.txt
